infra/modules/aws-eks-addons/test/app/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 075897120159.dkr.ecr.eu-west-1.amazonaws.com/multi-cloud/frontend:dev
          ports:
            - containerPort: 80
